Fix issue where iphone truncates letters horizontally Fixes #10

--- a/GooseGames/ClientApp/src/app/letterjam/table/my-jam/my-letters/my-letters.component.scss
+++ b/GooseGames/ClientApp/src/app/letterjam/table/my-jam/my-letters/my-letters.component.scss
@@ -12,8 +12,9 @@
 
 .player-card {
   margin-right: 0.5rem;
+  padding-left: 0px;
+  padding-right: 0px;
 }
-
 
 @keyframes movingOnLetterAnimation {
   from {
